v 0.02 parse secondary hosts file

--- a/Changes
+++ b/Changes
@@ -3,4 +3,6 @@ Revision history for Perl module Net::DNS::Dynamic::Adfilter
 0.01 Mon Mar 19 13:41:55 2012
     - original version; created by ExtUtils::ModuleMaker 0.51
 
+0.02 3-25-2012
+    - added parsing of secondary ad hosts file
 
