--- a/README
+++ b/README
@@ -1,13 +1,15 @@
 Net::DNS::Dynamic::Adfilter - A DNS ad filter
 
-This is a pure Perl DNS server intended for use as an ad filter for a local area network. 
-The module loads a list of ad domains and resolves DNS queries for those domains to 
-the loopback address 127.0.0.1. The module forwards any other requests downstream 
-to a specified list of nameservers or determines forwarding according to /etc/resolv.conf. 
-The module can also load and resolve any /etc/hosts definitions that might exist. 
+This is a pure Perl DNS server intended for use as an ad filter for a local 
+area network. The module loads a list of ad domains and resolves DNS queries 
+for those domains to the loopback address 127.0.0.1. The module forwards any 
+other requests downstream to a specified list of nameservers or determines 
+forwarding according to /etc/resolv.conf. The module can also load and resolve 
+any /etc/hosts definitions that might exist. 
 
-The module is experimental and currently works only on OSX 10.5+ machines due to system 
-calls to ''networksetup''. These calls modify dns settings on the wireless interface. 
+The module is experimental and currently works only on OSX 10.5+ machines due 
+to system calls to ''networksetup''. These calls modify dns settings on the 
+wireless interface. 
 
 Also see sample interface script scripts/adfilter.pl
 
