--- a/README
+++ b/README
@@ -1,14 +1,17 @@
 Net::DNS::Dynamic::Adfilter - A DNS ad filter
 
 This is a Perl DNS server intended for use as an ad filter for a local area 
-network. The module loads a list of ad domains and resolves DNS queries 
+network. The module loads lists of ad domains and resolves DNS queries 
 for those domains to the loopback address 127.0.0.1. The module forwards any 
 other requests downstream to a specified list of nameservers or determines 
 forwarding according to /etc/resolv.conf. The module can also load and resolve 
 any /etc/hosts definitions that might exist. 
 
-The module is experimental and currently works only on OSX 10.5+ machines due 
-to system calls to ''networksetup''. These calls modify dns settings on the 
+Ad domain definitions are loaded from pgl.yoyo.org/adservers and from an 
+optional domain list on the local host.
+
+The module is under development and currently works only on OSX 10.5+ machines 
+due to system calls to ''networksetup''. These calls modify dns settings on the 
 wireless interface. 
 
 Also see sample interface script scripts/adfilter.pl
@@ -22,4 +25,8 @@ sudo make install
 
 Run:
 
-sudo perl adfilter.pl -bg
+sudo perl scripts/adfilter.pl -bg
+                              (bg process -- kill manually)
+
+David Watson
+terminalfool@yahoo.com
