--- a/README
+++ b/README
@@ -1,20 +1,20 @@
 Net::DNS::Dynamic::Adfilter - A DNS ad filter
 
 This is a Perl DNS server intended for use as an ad filter for a local area 
-network. The module loads lists of ad domains and resolves DNS queries 
-for those domains to the loopback address 127.0.0.1. The module forwards any 
-other requests downstream to a specified list of nameservers or determines 
-forwarding according to /etc/resolv.conf. The module can also load and resolve 
-any /etc/hosts definitions that might exist. 
+network. Its function is to load lists of ad domains and nullify DNS queries 
+for those domains to the loopback address. Any other DNS queries are proxied 
+upstream, either to a specified list of nameservers or to those listed in 
+/etc/resolv.conf. The module can also load and resolve host definitions found 
+in /etc/hosts as well as hosts defined in a sql database.
 
-Ad domain definitions are loaded from pgl.yoyo.org/adservers and from an 
-optional domain list on the local host.
+For dynamic listings, an externally maintained host list can be loaded periodically 
+through a specified url. A local addendum of hosts may also be specified.
 
 The module is under development and currently works only on OSX 10.5+ machines 
 due to system calls to ''networksetup''. These calls modify dns settings on the 
 wireless interface. 
 
-Also see sample interface script scripts/adfilter.pl
+See sample interface script scripts/adfilter.pl
 
 Installation:
 
