--- a/README
+++ b/README
@@ -18,5 +18,5 @@ sudo make install
 
 Run:
 
-sudo perl /usr/local/bin/adfilter.pl -bg
+sudo perl scripts/adfilter.pl -bg
    (background process -- kill manually)
