--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl module Net::DNS::Dynamic::Adfilter
 
 {{$NEXT}}
-    - add dns switching
+    - dns switching; fix regexs, host default 
 
 0.068 Tue Jun 12 17:00:09 EDT 2012
     - minor edits, improve kwalitee rating
