--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl module Net::DNS::Dynamic::Adfilter
 
 {{$NEXT}}
+    - configurable loopback, rt 90614
+
+0.071 Tue Oct 30 09:59:26 EDT 2012
     - simplify script installation
 
 0.070 Sun Oct 28 11:56:48 EDT 2012
