add min. perl version to meta.yml

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl module Net::DNS::Dynamic::Adfilter
 
 {{$NEXT}}
+    - min. perl version...
+
+0.072 Mon Jan 6 01:19:35 EST 2014
     - configurable loopback address - rt 90614
 
 0.071 Tue Oct 30 09:59:26 EDT 2012
