fix timeout, test scripts

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl module Net::DNS::Dynamic::Adfilter
 
 {{$NEXT}}
+    - fix timeout, test scripts
+
+0.073 Fri Feb 7 03:17:18 EST 2014
     - require min. versions of Net::DNS and Perl
 
 0.072 Mon Jan 6 01:19:35 EST 2014
